--- a/src/app/dev/platforms/web/DevToys.Wasm/DevToys.Wasm.csproj
+++ b/src/app/dev/platforms/web/DevToys.Wasm/DevToys.Wasm.csproj
@@ -58,7 +58,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\DevToys.Api\DevToys.Api.csproj" />
     <ProjectReference Include="..\..\..\DevToys.Core\DevToys.Core.csproj" />
-    <ProjectReference Include="..\..\..\DevToys.MonacoEditor\DevToys.MonacoEditor.csproj" />
+    <!--<ProjectReference Include="..\..\..\DevToys.MonacoEditor\DevToys.MonacoEditor.csproj" />-->
     <ProjectReference Include="..\..\..\DevToys.UI.Framework\DevToys.UI.Framework.csproj" />
     <ProjectReference Include="..\..\..\DevToys.UI\DevToys.UI.csproj" />
   </ItemGroup>
