--- a/src/app/dev/platforms/web/DevToys.Wasm/DevToys.Wasm.csproj
+++ b/src/app/dev/platforms/web/DevToys.Wasm/DevToys.Wasm.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>$(NetCore)</TargetFramework>
     <ImplicitUsings>disable</ImplicitUsings>
     <NoWarn>NU1701</NoWarn>
-    <WasmPWAManifestFile>manifest.json</WasmPWAManifestFile>
+    <WasmPWAManifestFile>manifest.webmanifest</WasmPWAManifestFile>
     <DefineConstants>__WASM__</DefineConstants>
   </PropertyGroup>
 
